@@ -1,3 +1,8 @@
+Tue May 11 09:53:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/psych/parser.c (PSYCH_TRANSCODE): get rid of bare use of gcc
+	  extension.
+
 Mon May 10 02:58:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* compile.c (iseq_compile_each), vm_insnhelper.c (vm_invoke_block,
